New Feature: Added Customization for Sub Topics

--- a/index.html
+++ b/index.html
@@ -2,13 +2,80 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90' fill='%23F6E05E'>💡</text></svg>"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
+    <title>Tech Arena</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="root"
+      style="display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #f7fafc;"
+    >
+      <svg
+        width="300"
+        height="300"
+        viewBox="0 0 200 200"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        style="max-width: 100%; height: auto;"
+      >
+        <path
+          d="M100 30 C130 30 140 60 140 80 C140 100 125 115 110 125 L110 145 C110 150 90 150 90 145 L90 125 C75 115 60 100 60 80 C60 60 70 30 100 30 Z"
+          fill="#F6E05E"
+          stroke="#ECC94B"
+          stroke-width="5"
+        />
+
+        <path
+          d="M80 85 L95 100 L80 115 M120 85 L105 100 L120 115"
+          fill="none"
+          stroke="#718096"
+          stroke-width="5"
+          stroke-linecap="round"
+        />
+
+        <rect
+          x="85"
+          y="145"
+          width="30"
+          height="15"
+          rx="5"
+          fill="#A0AEC0"
+          stroke="#718096"
+          stroke-width="5"
+        />
+        <rect
+          x="88"
+          y="155"
+          width="24"
+          height="10"
+          rx="3"
+          fill="#A0AEC0"
+          stroke="#718096"
+          stroke-width="5"
+        />
+
+        <text
+          x="100"
+          y="185"
+          font-family="'Fira Code', monospace"
+          font-size="20"
+          font-weight="bold"
+          text-anchor="middle"
+          fill="#1A202C"
+        >
+          Tech Prep App
+        </text>
+      </svg>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
