New Feature: Added Customization for Sub Topics

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           text-anchor="middle"
           fill="#1A202C"
         >
-          Tech Prep App
+          Tech Arena
         </text>
       </svg>
     </div>
